--- a/src/main/resources/assets/snowman/lang/en_us.json
+++ b/src/main/resources/assets/snowman/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.snowman.brick": "Brick",
+  "item.snowman.ice_arrow": "Ice Arrow",
   "block.snowman.snow_tnt": "Snow TNT",
 
   "creativetab.snowman.snowman_items": "Snowman Items",
